...
            }
          },
          child: Scaffold(
            appBar: AppBar(
              backgroundColor: LightAndDarkMode.primaryColor(context),
              leading: IconButton(
                  key: const Key('panahKembaliKeLupaNamaPenggunAtauKataSandi'),
                  onPressed: () {
                    Navigator.of(context).pop();
                    nomorKtpController.text = '';
                    namaIbuKandungController.text = '';
                    nomorRekeningController.text = '';
                    FocusScope.of(context).requestFocus(FocusNode());
...
                            nomorKtpController: nomorKtpController,
                            namaIbuKandungController: namaIbuKandungController,
                            nomorRekeningController: nomorRekeningController,
                            nomorKtpFocus: nomorKtpFocus,
                            namaIbuKandungFocus: namaIbuKandungFocus,
                            nomorRekeningFocus: nomorRekeningFocus,
                            keyNomorKtp: const Key('textFieldNomorKtp'),
                            keyNamaIbuKandung: const Key('textFieldNamaIbuKandung'),
                            keyNomorRekeningBank: const Key('textFieldNomorRekeningBank'),
                            keyButtonLupaNamaPenggunaLanjutkan: const Key('buttonLanjutkanLupaNamaPengguna'),
                            keyAlertOk: const Key('buttonOkAlert'),
                          )
                        ],
                      ),
                    );
                  }
                }
...
