...
                        builder: (BuildContext context) {
                          return AlertDialog(
                            title: const Text('Pemberitahuan'),
                            content: const Text('Banner iklan masih dalam tahap pengembangan'),
                            actions: [
                              TextButton(
                                child: const Text('OK'),
                                onPressed: () {
                                  Navigator.of(context).pop();
                                },
                              ),
                            ],
                          );
...
